@@ -81,3 +81,4 @@
 [2025-06-09 12:49:45]	No se encontró una version válida	Se ha creado utilidad SystemUtils.isEmulator()
 [2025-06-09 14:42:25]	No se encontró una version válida	Vista dummy de Scanner OK
 [2025-06-09 16:46:34]	No se encontró una version válida	Previo update de vista de Products e Inventory
+[2025-06-09 16:55:40]	No se encontró una version válida	UPDATE de vistas de Products, Inventory y Customers --OK
